Kubernetes/kubeview/kubeview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeview-ingress
  namespace: kubeview
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  rules:
  - host: kube.test.uz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubeview
            port:
              number: 8000
  tls:
  - hosts:
    - kube.test.uz
    secretName: kubeview-tls
